--- a/dev/scss/pages/_home-page.scss
+++ b/dev/scss/pages/_home-page.scss
@@ -1,13 +1,10 @@
 // -------------------------------------
 // ★ Periodic Table of Web Templates
 // -------------------------------------
-
-
 $columns: 18;
 $rows: 9;
 $columnWidth: 53px;
 $columnHeight: 65px;
-
 
 .table-page {
   header {
@@ -171,6 +168,7 @@ $columnHeight: 65px;
       padding: 10px 0 5px 0;
     }
     .atomic-number {
+      font-family: Verdana, sans-serif;
       font-weight: bold;
       font-size: 10px;
       padding: 0 0 3px 0;
@@ -191,8 +189,6 @@ $columnHeight: 65px;
       margin-top: 30px;
     }
   }
-
-
 
   @include gridle_state(tablet) {
     margin-top: 0;
@@ -221,10 +217,6 @@ $columnHeight: 65px;
   }
 }
 
-
-
-
-
 .white-popup {
   position: relative;
   width: auto;
@@ -242,6 +234,8 @@ $columnHeight: 65px;
   .template-slider {
     @include clearfix;
     @include opacity(0);
+    padding: 20px 0 0 0;
+    margin-bottom: 30px;
     img { max-width: 100%; }
   }
 
@@ -255,12 +249,15 @@ $columnHeight: 65px;
 
   .template-slider, .template-slider .swiper-slide {
     @include gridle(12);
-    padding: 0 !important;
-    height: 400px;
-    background-size: cover;
+    text-align: center;
+    height: 100%;
+    background: #e5e7e9;
+    img {
+      width: 100%;
+    }
   }
   .template-slider {
-    height: 440px;
+    height: 100%;
   }
 
   .info {
@@ -300,10 +297,6 @@ $columnHeight: 65px;
     }
   }
 }
-
-
-
-
 
 
 @include keyframes(moveRight) {
