--- a/app/css/application.css
+++ b/app/css/application.css
@@ -158,9 +158,9 @@ button { border: none; outline: none; background: #53d6cc; cursor: pointer; colo
 @media screen and (min-width: 320px) and (max-width: 742px) { #detail-container .info { width: 100%; } }
 @media screen and (min-width: 320px) and (max-width: 742px) { #detail-container .template-slider { float: none; padding-left: 0; padding-right: 0; } }
 #detail-container .detail-pagination { margin: 15px 0; padding: 0; }
-#detail-container .detail-pagination .swiper-pagination-switch { position: relative; cursor: pointer; border: 1px solid #e5e7e9; }
-#detail-container .detail-pagination .swiper-pagination-switch:before { content: ""; display: block; height: 110%; width: 110%; border: 2px solid #f3f4f5; border-radius: 180px; position: absolute; top: -2px; right: 0px; bottom: 0px; left: -2px; }
-#detail-container .detail-pagination .swiper-pagination-switch.swiper-active-switch { background: #53d6cc; }
+#detail-container .detail-pagination .swiper-pagination-switch { display: inline-block; height: 10px; width: 10px; border-radius: 180px; background: none; border: 2px solid white; margin: 0 3px; cursor: pointer; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; transition: all 0.3s ease-out; }
+#detail-container .detail-pagination .swiper-pagination-switch:hover { background: rgba(83, 214, 204, 0.4); }
+#detail-container .detail-pagination .swiper-active-switch { background: #53d6cc; }
 
 @-webkit-keyframes moveRight { 0% { -webkit-transform: translateX(0); }
   100% { -webkit-transform: translateX(40px); } }
